hphp/hack/test/typecheck/defined/if_func_call.php.exp
File "if_func_call.php", line 7, characters 9-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "if_func_call.php", line 9, characters 9-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
