hphp/hack/test/typecheck/defined/if_func_call.php
<?hh // strict

function foo(int $i): void {}

function bar(bool $b): int {
  if ($b) {
    foo($x = 1);
  } else {
    foo($x = 2);
  }
  return $x;
}
